# sherlockbench-client-standardized-dv

./: .gitignore  README-standardized-dv.md  README.md  setup.cfg
alembic/: env.py
alembic/versions/: 087a241fea8b_make_attempts_nullable.py  38569312034d_remove_keeper_add_label.py  441cbfadb3eb_create_runs_and_attempts_tables.py  48959fd34844_label_to_labels.py  5f1a34143bbd_add_keeper_column.py  68cd64082b3c_remove_attempt_index.py  9ba4029805cf_make_function_name_nullable.py  add_failure_info_to_runs.py  c4d5d3b98bf7_add_metadata_to_the_attempts.py  e0b50b00d716_id_should_be_uuid.py  ee7a4f17393e_default_views_to_tables.py
src/sherlockbench_anthropic/: investigate.py  investigate_decide_verify.py  investigate_verify.py  main.py  prompts.py  verify.py
src/sherlockbench_client/: __init__.py  main.py  queries.py  run_api.py  run_internal.py  run_utils.py  start_run.py
src/sherlockbench_commands/: keeper.py  label.py  list_problem_sets.py  print_tool_calls.py  summarize_attempts.py
src/sherlockbench_deepseek/: investigate.py  investigate_decide_verify.py  investigate_verify.py  main.py  prompts.py  verify.py
src/sherlockbench_fireworks/: investigate.py  investigate_decide_verify.py  investigate_verify.py  main.py  prompts.py  verify.py
src/sherlockbench_google/: investigate.py  investigate_decide_verify.py  investigate_verify.py  main.py  prompts.py  utility.py  verify.py
src/sherlockbench_openai/: __init__.py  investigate.py  investigate_decide_verify.py  investigate_verify.py  main.py  prompts.py  queries.py  verify.py
src/sherlockbench_xai/: investigate.py  investigate_decide_verify.py  investigate_verify.py  main.py  prompts.py  verify.py
tests/: test_main.py
tests/sherlockbench_anthropic/: test_investigate_anthropic.py
tests/sherlockbench_client/: test_main.py
tests/sherlockbench_google/: test_investigate_google.py  test_verify_google.py
tests/sherlockbench_openai/: test_investigate.py  test_investigate_openai.py
