[metadata]
name = sherlockbench-client
version = 0.1

[options]
package_dir=
    =src
packages = find:
install_requires =
    alembic >= 1.15.2
    toolz >= 1.0.0
    openai >= 1.69.0
    requests >= 2.32.3
    PyYAML >= 6.0.2
    psycopg2-binary >= 2.9.10
    PyPika >= 0.48.9
    anthropic >= 0.49.0
    google-genai >= 1.8.0

[options.extras_require]
dev = 
    pytest >= 8.3.5

[options.entry_points]
console_scripts = 
    sherlockbench_openai    = sherlockbench_openai.main:main
    sherlockbench_anthropic = sherlockbench_anthropic.main:main
    sherlockbench_google    = sherlockbench_google.main:main
    sherlockbench_fireworks = sherlockbench_fireworks.main:main
    sherlockbench_xai       = sherlockbench_xai.main:main
    sherlockbench_deepseek  = sherlockbench_deepseek.main:main
    keeper                  = sherlockbench_commands.keeper:main
