[metadata]
name = sherlockbench-client
version = 0.1

[options]
package_dir=
    =src
packages = find:
install_requires =
    alembic >= 1.15.2
    toolz >= 1.0.0
    openai >= 1.82.0
    requests >= 2.32.3
    PyYAML >= 6.0.2
    psycopg2-binary >= 2.9.10
    PyPika >= 0.48.9
    anthropic >= 0.52.0
    google-genai >= 1.16.1
    filelock >= 3.18.0

[options.extras_require]
dev = 
    pytest >= 8.3.5

[options.entry_points]
# Two-phase is the standard way to run sherlockbench.
#
# In three-phase mode it's context is summarized and reset in-between
# investigation and verification. Three phase-mode exists because:
# - for certain experiments it gives more flexibility
# - Gemini 2.5 needs it because it's bugged
console_scripts = 
    sherlockbench_openai_2p = sherlockbench_openai.main:two_phase
    sherlockbench_openai_3p = sherlockbench_openai.main:three_phase
    sherlockbench_openai    = sherlockbench_openai.main:two_phase

    sherlockbench_google_2p = sherlockbench_google.main:two_phase
    sherlockbench_google_3p = sherlockbench_google.main:three_phase
    sherlockbench_google    = sherlockbench_google.main:three_phase

    sherlockbench_xai_2p    = sherlockbench_xai.main:two_phase
    sherlockbench_xai_3p    = sherlockbench_xai.main:three_phase
    sherlockbench_xai       = sherlockbench_xai.main:two_phase

    sherlockbench_anthropic = sherlockbench_anthropic.main:two_phase

    sherlockbench_fireworks = sherlockbench_fireworks.main:two_phase

    sherlockbench_deepseek  = sherlockbench_deepseek.main:two_phase

    # helpful commands
    label                   = sherlockbench_commands.label:main
    summarize_attempts      = sherlockbench_commands.summarize_attempts:main
    print_tool_calls        = sherlockbench_commands.print_tool_calls:main
