[metadata]
name = sherlockbench-client
version = 0.1

[options]
package_dir=
    =src
packages = find:
install_requires =
    alembic >= 1.15.2
    toolz >= 1.0.0
    openai >= 1.82.0
    requests >= 2.32.3
    PyYAML >= 6.0.2
    psycopg2-binary >= 2.9.10
    PyPika >= 0.48.9
    anthropic >= 0.52.0
    google-genai >= 1.16.1
    filelock >= 3.18.0

[options.extras_require]
dev = 
    pytest >= 8.3.5

[options.entry_points]
# Two-phase is the standard way to run sherlockbench.
#
# In three-phase mode it's context is summarized and reset in-between
# investigation and verification. Some models perform better with 3-phase mode.

console_scripts = 
    #sbench_openai_2p    = sherlockbench_openai.main:two_phase
    sbench_openai_3p    = sherlockbench_openai.main:three_phase
    #sbench_openai       = sherlockbench_openai.main:main

    #sbench_google_2p    = sherlockbench_google.main:two_phase
    sbench_google_3p    = sherlockbench_google.main:three_phase
    #sbench_google       = sherlockbench_google.main:main

    #sbench_xai_2p       = sherlockbench_xai.main:two_phase
    sbench_xai_3p       = sherlockbench_xai.main:three_phase
    #sbench_xai          = sherlockbench_xai.main:main

    #sbench_anthropic_2p = sherlockbench_anthropic.main:two_phase
    sbench_anthropic_3p = sherlockbench_anthropic.main:three_phase
    #sbench_anthropic    = sherlockbench_anthropic.main:main

    #sbench_deepseek_2p  = sherlockbench_deepseek.main:two_phase
    sbench_deepseek_3p  = sherlockbench_deepseek.main:three_phase
    #sbench_deepseek     = sherlockbench_deepseek.main:main

    #sbench_fireworks_2p = sherlockbench_fireworks.main:two_phase
    sbench_fireworks_3p = sherlockbench_fireworks.main:three_phase
    #sbench_fireworks    = sherlockbench_fireworks.main:main

    # helpful commands
    label               = sherlockbench_commands.label:main
    summarize_attempts  = sherlockbench_commands.summarize_attempts:main
    print_tool_calls    = sherlockbench_commands.print_tool_calls:main
    sbench_list         = sherlockbench_commands.list_problem_sets:main
